<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.ssaavvll.yandextest.AboutActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_header_height" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="4dp"
                android:background="@android:color/white"
                android:layout_marginBottom="@dimen/half_padd"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:textSize="@dimen/head_about"
                    android:paddingTop="@dimen/half_padd"
                    android:paddingBottom="@dimen/half_padd"
                    android:paddingLeft="@dimen/standart_padd"
                    android:paddingRight="@dimen/standart_padd"
                    android:text="@string/header_about_author"
                    android:textColor="@color/mainText" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D3D3D3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/half_padd"
                    android:paddingBottom="@dimen/half_padd"
                    android:paddingLeft="@dimen/standart_padd"
                    android:paddingRight="@dimen/standart_padd"
                    android:text="@string/text_about_author"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="4dp"
                android:background="@android:color/white"
                android:layout_marginBottom="@dimen/half_padd"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:textSize="@dimen/head_about"
                    android:paddingTop="@dimen/half_padd"
                    android:paddingBottom="@dimen/half_padd"
                    android:paddingLeft="@dimen/standart_padd"
                    android:paddingRight="@dimen/standart_padd"
                    android:text="@string/header_about_app"
                    android:textColor="@color/mainText" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D3D3D3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/half_padd"
                    android:paddingBottom="@dimen/half_padd"
                    android:paddingLeft="@dimen/standart_padd"
                    android:paddingRight="@dimen/standart_padd"
                    android:text="@string/text_about_app"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:elevation="4dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/head_about"
                    android:paddingTop="@dimen/half_padd"
                    android:paddingBottom="@dimen/half_padd"
                    android:paddingLeft="@dimen/standart_padd"
                    android:paddingRight="@dimen/standart_padd"
                    android:text="@string/header_contacts"
                    android:textColor="@color/mainText" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D3D3D3"/>
                <TextView
                    android:id="@+id/vk_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/half_padd"
                    android:paddingBottom="@dimen/half_padd"
                    android:paddingLeft="@dimen/standart_padd"
                    android:paddingRight="@dimen/standart_padd"
                    android:text="@string/text_contacts_vk"/>
                <TextView
                    android:id="@+id/send_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/half_padd"
                    android:paddingBottom="@dimen/half_padd"
                    android:paddingLeft="@dimen/standart_padd"
                    android:paddingRight="@dimen/standart_padd"
                    android:text="@string/text_contacts_mail"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:elevation="4dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/head_about"
                    android:paddingTop="@dimen/half_padd"
                    android:paddingBottom="@dimen/half_padd"
                    android:paddingLeft="@dimen/standart_padd"
                    android:paddingRight="@dimen/standart_padd"
                    android:text="@string/header_copyrights"
                    android:textColor="@color/mainText" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D3D3D3"/>
                <TextView
                    android:id="@+id/copyright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"
                    android:paddingTop="@dimen/half_padd"
                    android:paddingBottom="@dimen/half_padd"
                    android:paddingLeft="@dimen/standart_padd"
                    android:paddingRight="@dimen/standart_padd"
                    />
            </LinearLayout>
        </LinearLayout>
</ScrollView>